# Epymorph

./: .gitignore  BRANCH_README.md  CONTRIBUTING.md  G1.L2.1-pf.ipynb  G3.L0.1-pf-multinode.ipynb  README.md  TODO.md  USAGE.ipynb  api_key.txt  cases.csv  create_csv.ipynb  dataframe_test.ipynb  demo_loc.ipynb  demo_multisimulator.ipynb  demo_multisimulator_multistrata.ipynb  demo_noloc_fail.ipynb  demo_noloc_success.ipynb  example.ipynb  forecast_parameters.ipynb  m_profile.prof  mkdocs.yml  nb_ipm_exec.py  nb_sim.py  old_example.ipynb  parameter_estimation.ipynb  parameter_estimation_multinode.ipynb  parameter_estimation_usage.ipynb  pf_v_enkf.ipynb  plotting_example.ipynb  plotting_test_params.ipynb  profile.prof  pyproject.toml  requirements-dev.txt  requirements.txt  rsv_analysis.ipynb  synthetic_data.csv  synthetic_data_comp.csv  synthetic_data_generation.ipynb  synthetic_data_multinode.csv  synthetic_data_multinode.ipynb  (+5 more)
.github/workflows/: canary-test.yml  code-quality.yml  dep-review.yml  formatting.yml  install-matrix-test.yml  matrix-test.yml  release.yml
data/: pei-population.csv  pei.movement
doc/: refactored.ipynb
doc/Intro/: Intro_vignettes.ipynb  intro_vignettes.py
doc/demo/: 01-SIRH-IPM.ipynb  02-states-GEO.ipynb  03-counties-GEO.ipynb  04-time-varying-beta.ipynb  05-visualizing-mm.ipynb  2024-02-06-adrio-demo.ipynb
doc/devlog/: 2023-05-03.html  2023-05-03.ipynb  2023-05-04.html  2023-05-04.ipynb  2023-05-16.ipynb  2023-05-17.ipynb  2023-05-31-mm.ipynb  2023-05-31-sirh.ipynb  2023-06-01-pei-example.ipynb  2023-06-01-sparsemod-example.ipynb  2023-06-09.ipynb  2023-06-16.ipynb  2023-06-20.ipynb  2023-06-23.ipynb  2023-06-26.ipynb  2023-06-28.ipynb  2023-06-30.ipynb  2023-07-06.ipynb  2023-07-07.ipynb  2023-07-11.ipynb  2023-07-12.ipynb  2023-07-13.ipynb  2023-07-14.ipynb  2023-07-20-movement-probs.ipynb  2023-07-24.ipynb  2023-08-11.ipynb  2023-08-17.ipynb  2023-08-23.ipynb  2023-09-22-adrio-demo.ipynb  2023-09-29.ipynb  2023-10-05.ipynb  2023-10-10.ipynb  2023-10-25.ipynb  2023-10-26.ipynb  2023-11-03-seirs-example.ipynb  2023-11-08-age-ipm.ipynb  2023-11-08.ipynb  2023-11-15.ipynb  2023-11-20-adrio-phase-2-demo.ipynb  2023-11-22-ipm-probs.ipynb  (+69 more)
doc/scripts/: setup-epymorph-monsoon.sh
doc/vignetttes/: G1.L1.1-birth-death.ipynb
docs/: __main__.md  adrio_acs5.md  adrio_adrio.md  adrio_cdc.md  adrio_commuting_flows.md  adrio_csv.md  adrio_humidity.md  adrio_lodes.md  adrio_numpy.md  adrio_prism.md  adrio_processing.md  adrio_respiratory_cdc.md  adrio_soda.md  adrio_us_tiger.md  attribute.md  cache.md  cli_cache.md  cli_main.md  compartment_model.md  data_ipm_no.md  data_ipm_pei.md  data_ipm_seirs.md  data_ipm_sirh.md  data_ipm_sirs.md  data_ipm_sparsemod.md  data_mm_centroids.md  data_mm_flat.md  data_mm_icecube.md  data_mm_no.md  data_mm_pei.md  data_mm_sparsemod.md  data_pei.md  data_shape.md  data_type.md  data_usage.md  database.md  error.md  event.md  geography_custom.md  geography_scope.md  (+46 more)
epymorph/: __init__.py  __main__.py  abstract.py  adrio.py  attribute.py  cache.py  clock.py  code.py  compartment_model.py  context.py  data_shape.py  data_type.py  data_usage.py  database.py  draw.py  epi.py  error.py  event.py  geo.py  initializer.py  ipm-exp.py  ipm_exp.py  kit.py  main.py  movement.py  movement_clause.py  movement_model.py  params.py  pei.gv  plots.py  plotting.py  prepare.py  proxy.py  rume.py  run.py  settings.py  sim.py  sim_context.py  simulation.py  sirh.gv  (+10 more)
epymorph/.scratch/: my-params.toml
epymorph/adrio/: __init__.py  acs5.py  adrio.py  adrio_census.py  adrio_driver.py  cdc.py  cdc_legacy.py  commuting_flows.py  csv.py  humidity.py  lodes.py  movement_distribution.py  numpy.py  prism.py  processing.py  respiratory_cdc.py  soda.py  us_tiger.py  validation.py
epymorph/adrios/: dissimilarity_index.py  geographic_centroid.py  median_income.py  name_state.py  pop_by_age.py  population_density.py
epymorph/cli/: cache.py  prepare.py  run.py  validate.py  verify.py
epymorph/data/: __init__.py  pei.py  registry.py
epymorph/engine/: context.py  initialization.py  ipm_exec.py  mm_exec.py  standard_sim.py  world.py  world_hypercube.py  world_list.py
epymorph/examples/: pei_py.py  pei_spec.py  pei_spec_n.py  sparse_py.py  sparse_spec.py
epymorph/forecasting/: daily_data_SW.csv  dataframe_test.ipynb  dynamic_params.py  enkf_forecasting.ipynb  enkf_syn_beta_per_node.ipynb  ensemble_kalman_filter.py  filter.py  filter_plot.py  forecast.py  forecasting_enkf.ipynb  likelihood.py  multi_output.py  multi_simulator.py  multi_simulator_nb.py  munge_realizations.py  param_transformations.py  parameter_strategy.py  particle_filter.py  pipeline.py  profile_enkf.py  realization_strategy.py  unknown_params.py
epymorph/geo/: __init__.py  abstract.py  cache.py  common.py  dynamic.py  geo.py  spec.py  static.py  util.py
epymorph/geography/: custom.py  scope.py  us_census.py  us_geography.py  us_tiger.py
epymorph/ipm/: attribute.py  compartment_ipm.py  compartment_model.py  initializer.py  ipm.py  ipm_py.txt
epymorph/log/: file.py  messaging.py  movement.py  pipeline_messaging.py
epymorph/logging/: messaging.py
epymorph/model/: geo_pei.py  ipm_pei.py  mvm_commuter.py  mvm_disperser.py  mvm_pei.py  mvm_sparesemod.py  (+1 more)
pf_vignettes/: DailyFluAnalysis.ipynb  New_ADRIO.ipynb  cdc_daily_data_extract.ipynb  comparison.ipynb  daily_data_SW.csv  forecast_comp.ipynb  groupby_prac.ipynb  hospitalization_validation.ipynb  if2_hack.ipynb  interpolate.ipynb  interpolated_data.csv  pf_benchmark.py  pf_collapse.ipynb  pf_missing_data.ipynb  pf_multi_strata.ipynb  pf_realdata_daily.ipynb  pf_syn_beta.ipynb  pf_syn_beta_per_node.ipynb  pf_synthetic_data.ipynb  poisson_nb_comparison.ipynb  real_data.ipynb  scratch.ipynb  synthetic_data.csv  synthetic_data_poisson.csv
scripts/: README.md  dep_check.py  install-test.sh  mkdocs_generate_api_pages.py  modules.py  tiger-data-status.py
src/: clock.py  epi.py  example.py  geo.py  main.py  movement.py  pei.py  plotting.py  sim_context.py  simulation.py  util.py  world.py
tests/: data_shape_test.py
(+363 files in other folders)
