[project]
name = "epymorph"
description = "EpiMoRPH spatial disease modeling"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["epidemiology", "disease modeling", "metapopulation"]

authors = [
  { name = "Tyler Coles", email = "tyler.coles@nau.edu" },
  { name = "Jeffrey Covington", email = "jeffrey.covington@nau.edu" },
  { name = "Ye Chen", email = "ye.chen@nau.edu" },
  { name = "Eck Doerry", email = "eck.doerry@nau.edu" },
  { name = "Joseph Mihaljevic", email = "joseph.mihaljevic@nau.edu" },
]

dynamic = ["version"]

requires-python = ">=3.11,<3.13"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Typing :: Typed",
  "Development Status :: 5 - Production/Stable",
]

dependencies = [
  "matplotlib",
  "numpy>=1.26.4,<2",
  "sympy",
  "pandas>=2,<3",
  "openpyxl",
  "geopandas",
  "pyproj",
  "shapely",
  "platformdirs",
  "graphviz",
  "typing_extensions",
  "rasterio>=1.3.9",
  "humanize",
  "sparklines",
  "scipy>=1,<2",
  "requests",
]

[dependency-groups]
dev = [
  # Jupyter
  "ipykernel>7",
  # Linting/formatting
  "ruff~=0.15.15",
  # Testing
  "pytest~=9.0.3",
  "pytest-cov~=7.1.0",
  "vcrpy~=8.1.1",
  # Build
  "setuptools-scm~=10.0.5",
  # Documentation
  "mkdocs~=1.6.1",
  "mkdocs-material~=9.7.6",
  "mkdocs-gen-files~=0.6.1",
  "mkdocstrings[python]~=1.0.4",
  "griffe-inherited-docstrings==1.1.2",
]

[tool.uv]
exclude-newer = "7 days" # supply chain attack mitigationuv audit

[project.urls]
Homepage = "https://docs.www.epimorph.org"
Source = "https://github.com/NAU-CCL/Epymorph"
Issues = "https://github.com/NAU-CCL/Epymorph/issues"

[project.scripts]
epymorph = "epymorph.__main__:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm[simple]>=10.0.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["epymorph*"]

[tool.setuptools.package-data]
"epymorph" = ["py.typed"]

[tool.setuptools_scm]
# enable setuptools_scm; shouldn't be strictly necessary but uv complains otherwise

[tool.pyright]
exclude = [
  ".venv",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  "build",
]
typeCheckingMode = "standard"
# Pyright doesn't seem to be able to handle sympy operators,
# so until that's fixed ignore operator errors.
reportOperatorIssue = "none"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "F", # (basic pyflakes lints)
  "E", # (basic pycodestyle lints)
  "A", # (don't shadow builtins)
  "I", # (sort imports)
  "T10", # (no debugger directives laying around)
  "ISC", # (clean string concat usage)
  "PIE", # (general improvements)
  "PERF", # (performance traps)
  "PTH", # (prefer pathlib)
  "NPY", # (numpy linting)
  "PD", # (pandas linting)
  "W", # (no extra whitespace)
  "S", # (security rules)
  "BLE", # (catching Exception is too general)
  "PT", # (pytest)
  "T20", # (no extra print statements laying around)
  "ERA", # (no commented code)
  "FURB", # (use modern python)
  "N", # (naming conventions)

  # NOTE: rules I'd like to enable some day are below, commented out
  # "C4", # (clean comprehensions usage)
  # "UP", (use modern python)
  # "B", (possible bugs)
  # "D", (enforced documentation)
  # "DOC", (enforced documentation; complementary with D)
  # "ANN", (enforced type annotations)
  # "RET", (clean return handling)
  # "SIM", (code simplifications)
  # "SLF", (prevent private member access)
  # "ARG", (unused args)
  # "COM", (comma consistency; maybe: is there a way to stop this from demanding trailing commas in function calls?)
  # "TD", (rigorous formatting of TODO comments)
  # "RUF", (general linting)
  # "TRY", (error handling; might need to be selective with this one)
]

ignore = [
  "E741", # (ambiguous names: false positives for common compartment name "I")
]

[tool.ruff.lint.extend-per-file-ignores]
# Allow star imports in tests and notebooks.
# S101 we are allowed to use `assert` in pytest
# I001 (import sort) appears to be broken in notebooks.
# T201 allow prints in notebooks.
# N806 allow non-PEP8-compliant names in IPMs
"tests/**/*_test.py" = ["F403", "F405", "S101"]
"*.ipynb" = ["F403", "F405", "I001", "T201"]
"epymorph/data/ipm/*" = ["N806"]

[tool.ruff.lint.pep8-naming]
# These variable names are very convenient for describing simulation dimensions,
# so we'll special-case them.
extend-ignore-names = ["T", "S", "C", "E", "N", "X"]
